--- a/angular-tour-of-heroes/src/app/heroes/heroes.component.html
+++ b/angular-tour-of-heroes/src/app/heroes/heroes.component.html
@@ -1,1 +1,20 @@
-<p>heroes works!</p>
+
+<!-- <h2>{{hero.name | uppercase}} Details</h2>
+<div><span>id: </span>{{hero.id}}</div>
+<div>
+    <label for="name"></label>
+    <input id="name" [(ngModel)]="hero.name" placeholder="name">
+</div> -->
+<!-- <h2>My Heroes</h2>
+<ul>
+    <li *ngFor="let hero of heroes">
+        <button type="button" (click)="onSelect(hero)"></button>
+        <span class="badge">{{hero.id}}</span>
+        <span class="name">{{hero.name}}</span>
+    </li>
+</ul>
+ -->
+ <div *ngIf="selectedHero">
+     <h2>{{selectedHero.name | uppercase}} Details </h2>
+     <div>id: {{selectedHero.id}}</div>
+ </div>
